--- a/test/test.html
+++ b/test/test.html
@@ -6,9 +6,48 @@
     <link href="../classic/theme-classic/resources/theme-classic-all.css" rel="stylesheet">
     <script type="text/javascript" src="../ext-all.js"></script>
     <script type="text/javascript">
-        Ext.onReady(function() {
-            Ext.Msg.alert("TEST 01", "Hello world");
+
+        Ext.application({
+            name: 'MyApp',
+
+            launch: function () {
+                Ext.create('Ext.panel.Panel', {
+                    title: 'Login Form',
+                    width: 300,
+                    bodyPadding: 10,
+                    renderTo: Ext.getBody(),
+                    items: [
+                        {
+                            xtype: 'textfield',
+                            fieldLabel: 'ID',
+                            itemId: 'idField',
+                            allowBlank: false
+                        },
+                        {
+                            xtype: 'textfield',
+                            inputType: 'password',
+                            fieldLabel: 'Password',
+                            itemId: 'passwordField',
+                            allowBlank: false
+                        },
+                        {
+                            xtype: 'button',
+                            text: 'Login',
+                            handler: function () {
+                                var idField = this.up('panel').down('#idField');
+                                var passwordField = this.up('panel').down('#passwordField');
+
+                                var id = idField.getValue();
+                                var password = passwordField.getValue();
+
+                                Ext.Msg.alert('Login Information', 'ID: ' + id + '<br>Password: ' + password);
+                            }
+                        }
+                    ]
+                });
+            }
         });
+
     </script>
 </head>
 <body>
